<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2025, WSO2 LLC. (http://wso2.com) All Rights Reserved.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>tests-integration</artifactId>
        <groupId>org.wso2.am</groupId>
        <version>4.7.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>cucumber-tests</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <runGroupTest>false</runGroupTest>
        <!-- Default suite (filename under src/test/resources); override with -Dsurefire.suite.xml=<file> for framework-verification lanes. -->
        <surefire.suite.xml>testng.xml</surefire.suite.xml>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>
        <dependency>
            <groupId>org.skyscreamer</groupId>
            <artifactId>jsonassert</artifactId>
            <version>${org.skyscreamer.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wso2.am</groupId>
            <artifactId>testcontainers</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wso2.am</groupId>
            <artifactId>integration-test-utils</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>${cucumber.picocontainer.version}</version>
        </dependency>
        <dependency>
            <groupId>com.moandjiezana.toml</groupId>
            <artifactId>toml4j</artifactId>
            <version>${toml4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>5.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons.lang3.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons.io.version}</version>
            <scope>test</scope>
        </dependency>
        <!--
            SLF4J->log4j 1.x binding for the test JVM. Without a binding, Testcontainers' Slf4jLogConsumer
            (which carries each booted APIM container's stdout/stderr) routes to SLF4J NOP and the server's
            startup log is silently dropped - leaving CI blind on boot failures. Pinned to slf4j.api.version
            (not the managed org.slf4j.version) so the binding matches the slf4j-api already on the classpath
            and SLF4J does not emit a version-mismatch warning.
        -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.api.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <!--
                        Gherkin feature-linter (docs/devs/lint_features.py): enforces the .feature rules that
                        Checkstyle/PMD structurally cannot see (tag vocabulary vs capability-map.yml, @cap/folder
                        placement, unique titles, _setup_/@setup, whitespace/EOF, no prose-as-tag). Runs at
                        `validate` (fails fast) and FAILS the build on any hard violation. Requires python3
                        (as render_coverage_tree.py already does).
                    -->
                    <execution>
                        <id>gherkin-feature-lint</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>python3</executable>
                            <arguments>
                                <argument>${maven.multiModuleProjectDirectory}/docs/devs/lint_features.py</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <!-- Exclude test groups which are not explicitly enabled -->
                    <excludedGroups>${surefire.excludedGroups}</excludedGroups>
                    <groups>${surefire.groups}</groups>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/${surefire.suite.xml}</suiteXmlFile>
                    </suiteXmlFiles>
                    <systemPropertyVariables>
                        <testcontainers.reuse.enable>true</testcontainers.reuse.enable>
                        <org.apache.http.wire.level>OFF</org.apache.http.wire.level>
                        <!-- External-KM (IS7) build artifacts are staged by the testcontainers module's
                             pre-integration-test execs under tests-common/testcontainers/target/is7. Resolve them
                             relative to THIS module's basedir so the external-KM block finds them without a -D
                             override (the code's module.dir fallback resolves to this module, not testcontainers). -->
                        <apim.km.truststore.path>${project.basedir}/../../tests-common/testcontainers/target/is7/client-truststore.jks</apim.km.truststore.path>
                        <is.notification.jar.path>${project.basedir}/../../tests-common/testcontainers/target/is7/wso2is.notification.event.handlers-2.1.3.jar</is.notification.jar.path>
                        <is.truststore.path>${project.basedir}/../../tests-common/testcontainers/target/is7/is-client-truststore.p12</is.truststore.path>
                        <is.default.toml.path>${project.basedir}/../../tests-common/testcontainers/target/is7/is-default-deployment.toml</is.default.toml.path>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <!-- Default profile: exclude groupTest and migrationTest -->
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <surefire.groups/>
                <surefire.excludedGroups>migrationTest</surefire.excludedGroups>
            </properties>
        </profile>
        <!-- Profile to include all tests including migrationTest -->
        <profile>
            <id>migration</id>
        </profile>
    </profiles>
</project>
